add ssr code
